--- a/respondd.service
+++ b/respondd.service
@@ -5,11 +5,11 @@ StartLimitBurst=5
 After=network.target
 
 [Service]
-ExecStart=/opt/mesh-announce/respondd.py  -i br-fftr -i fvpn -b bat0  -i br-fftr_01 -i fvpn_01 -b bat01  -i br-fftr_02 -i fvpn_02 -b bat02  -i br-fftr_03 -i fvpn_03 -b bat03  -i br-fftr_04 -i fvpn_04 -b bat04 -i br-fftr_05 -i fvpn_05 -b bat05
+ExecStart=/opt/mesh-announce_test/respondd.py  -i br-fftr -i fvpn -i bat0 -b bat0 -i br-fftr_01 -i fvpn_01 -i bat01 -b bat01 -i br-fftr_02 -i fvpn_02 -i bat02 -b bat02 -i br-fftr_03 -i fvpn_03 -i bat03 -b bat03  -i br-fftr_04 -i fvpn_04 -i bat04 -b bat04 -i br-fftr_05 -i fvpn_05 -i bat05 -b bat05 -n fftr_GW
 Restart=always
 RestartSec=30
 Environment=PATH=/usr/local/sbin:/usr/local/bin:/usr/sbin:/usr/bin:/sbin:/bin
-WorkingDirectory=/opt/mesh-announce
+WorkingDirectory=/opt/mesh-announce_test
 
 
 [Install]
